<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/viewLoginAuth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip">

    <ir.pegahtech.backtorysample.views.styledViews.StyledFloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ir.pegahtech.backtorysample.views.styledViews.StyledEditText
            android:id="@+id/editUsernameLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/auth_user_name_title"
            android:singleLine="true"
            android:textSize="16sp" />
    </ir.pegahtech.backtorysample.views.styledViews.StyledFloatLabeledEditText>

    <ir.pegahtech.backtorysample.views.styledViews.StyledFloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ir.pegahtech.backtorysample.views.styledViews.StyledEditText
            android:id="@+id/editPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:hint="@string/auth_password_title"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="16sp" />
    </ir.pegahtech.backtorysample.views.styledViews.StyledFloatLabeledEditText>

    <ir.pegahtech.backtorysample.views.styledViews.StyledButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:background="@drawable/background_blue_smooth"
        android:text="@string/auth_login_title"
        android:textColor="@color/white" />
</LinearLayout>